# guild

./: .env.example  .gitignore  00_Implementation_Plan_Overview.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Phase_10_Testing_Documentation_and_Launch_Prep.md  Phase_1_Foundation_and_Project_Setup.md  Phase_2_Model_Client_Abstraction_Layer.md  Phase_3_Orchestration_Engine.md  Phase_4_Conversation_and_Context_Management.md  Phase_5_Tool_System_Implementation.md  Phase_6_Rich_TUI_Development.md  Phase_7_Commands_and_User_Interaction.md  Phase_8_Git_Integration_and_Project_Intelligence.md  Phase_9_Polish_Security_and_Error_Handling.md  README.md  prd-ai-groupchat-cli.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
codecrew/: __init__.py  __main__.py  cli.py  errors.py
codecrew/config/: __init__.py  defaults.yaml  settings.py
codecrew/conversation/: __init__.py  manager.py  migrations.py  models.py  persistence.py  summarizer.py
codecrew/git/: __init__.py  repository.py  utils.py
codecrew/models/: __init__.py  base.py  claude.py  gemini.py  gpt.py  grok.py  tools.py  types.py
codecrew/orchestrator/: __init__.py  context.py  engine.py  events.py  mentions.py  persistent.py  prompts.py  speaking.py  tool_orchestrator.py  turns.py
codecrew/tools/: __init__.py  context.py  executor.py  permissions.py  registry.py
codecrew/ui/: __init__.py  app.py  clipboard.py  history.py  keybindings.py  navigation.py  theme.py
codecrew/utils/: __init__.py  logging.py
docs/: CONFIGURATION.md  PHASE10_PLAN.md  PHASE6_PLAN.md  PHASE7_PLAN.md  PHASE8_PLAN.md  PHASE9_PLAN.md  SESSION_HANDOVER_PHASE3.md  SESSION_HANDOVER_PHASE4.md  SESSION_HANDOVER_PHASE5.md  SESSION_HANDOVER_PHASE6.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: release.py
tests/: conftest.py  test_config.py  test_conversation_manager.py  test_persistence.py  test_persistence_batch.py  test_security.py  test_summarizer.py
tests/e2e/: __init__.py  test_full_conversation.py  test_tool_workflows.py
tests/test_git/: test_repository.py  test_utils.py
tests/test_models/: test_clients.py  test_tools.py  test_types.py
tests/test_orchestrator/: test_context.py  test_engine.py  test_mentions.py  test_persistent.py  test_prompts.py  test_speaking.py  test_turns.py
tests/test_tools/: test_builtin.py  test_context_tracking.py  test_executor.py  test_git_tools.py  test_parallel_execution.py  test_permissions.py  test_registry.py  test_tool_orchestrator.py
tests/test_ui/: __init__.py  test_clipboard.py  (+6 more)
(+18 files in other folders)
